--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <h1>VSite Pipeline</h1>
 <p>Demo for VSite pipeline.</p>
 <p>Demo for commit change.</p>
+<p>Tocket no 60 commit.</p>
+<p>Tocket no 60 another commit.</p>
 
 </body>
 </html>
